--- a/D79402A82.opf/index.yml
+++ b/D79402A82.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   02c7b4b610204b96a32eb0c26b544691:
     parts: {}
+    work_id: D1591
     span:
-    - vol: 12
+    - base: a83e
       start: 1
       end: 5463
-    work_id: D1591
